add username to auth model
