# models/user.model.js
@@ -9,6 +9,11 @@ const userSchema = new Schema(
       required: true,
       unique: true,
     },
+    username: {
+      type: String,
+      required: true,
+      unique: true,
+    },
     password: {
       type: String,
       required: true,
